--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,6 +104,7 @@ services:
     working_dir: /app
     command: >
       sh -c "
+        apk add --no-cache openjdk17-jre &&
         npm install -g firebase-tools@latest &&
         firebase emulators:start --only auth,firestore,storage --project cinefilm-platform
       "
