feat: Complete Docker setup with Firebase emulators, Redis, n8n, ADK agents, and Admin UI
- Fixed Firebase emulator configuration (bind to 0.0.0.0 for Docker networking)
- Added Redis caching and rate limiting middleware
- Integrated n8n workflow automation
- Implemented Google ADK agents (concept, script, pre-production stages)
- Created Admin UI with dashboard, users, projects, workflows, and agents management
- Fixed project creation with proper Firestore emulator connection
- Added agent API client and React Query hooks
- Fixed duplicate React keys in project detail page
- Improved error handling and logging
- Added comprehensive documentation
- Updated .gitignore to exclude service account keys and secrets

--- a/firebase.json
+++ b/firebase.json
@@ -9,12 +9,14 @@
       "rootDirectory": "./"
     },
     "auth": {
+      "host": "0.0.0.0",
       "port": 9099
     },
     "functions": {
       "port": 5001
     },
     "firestore": {
+      "host": "0.0.0.0",
       "port": 8080
     },
     "database": {
@@ -27,6 +29,7 @@
       "port": 8085
     },
     "storage": {
+      "host": "0.0.0.0",
       "port": 9199
     },
     "eventarc": {
@@ -36,7 +39,9 @@
       "port": 9499
     },
     "ui": {
-      "enabled": true
+      "enabled": true,
+      "host": "0.0.0.0",
+      "port": 4000
     },
     "singleProjectMode": true
   },
