--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,13 +22,14 @@ services:
       - FIREBASE_PROJECT_ID=cinefilm-platform
       - FIREBASE_AUTH_EMULATOR_HOST=firebase-emulators:9099
       - FIRESTORE_EMULATOR_HOST=firebase-emulators:8080
+      - FIREBASE_STORAGE_EMULATOR_HOST=firebase-emulators:9199
     env_file:
       - ./backend/.env
     # Note: .env file is optional - will use environment variables if not present
     depends_on:
-      - postgres
-      - redis
-      - firebase-emulators
+          - postgres
+          - redis
+          - firebase-emulators
     networks:
       - cinefilm-network
     restart: unless-stopped
@@ -104,15 +105,29 @@ services:
     working_dir: /app
     command: >
       sh -c "
-        apk add --no-cache openjdk17-jre &&
+        apk add --no-cache openjdk21-jre wget &&
         npm install -g firebase-tools@latest &&
-        firebase emulators:start --only auth,firestore,storage --project cinefilm-platform
+        echo 'Starting Firebase Emulators...' &&
+        # Check if emulators are already cached
+        if [ -d /root/.cache/firebase/emulators ] && [ \"\$(ls -A /root/.cache/firebase/emulators 2>/dev/null)\" ]; then
+          echo 'Using pre-downloaded emulators from cache...'
+        else
+          echo 'No cached emulators found. Will attempt download...'
+        fi &&
+        # Try to start with all emulators, fallback to auth+storage if Firestore fails
+        firebase emulators:start --only auth,firestore,storage --project cinefilm-platform 2>&1 || 
+        (echo '⚠️  Firestore emulator failed, starting with Auth and Storage only...' && 
+         firebase emulators:start --only auth,storage --project cinefilm-platform)
       "
     volumes:
       - .:/app
       - firebase_emulator_data:/root/.cache/firebase/emulators
+      # Mount host emulator cache if available (pre-downloaded emulators)
+      - ${HOME}/.cache/firebase/emulators:/root/.cache/firebase/emulators:ro
     environment:
       - FIREBASE_TOKEN=${FIREBASE_TOKEN:-}
+      # Skip automatic emulator downloads - use cached versions
+      - FIREBASE_EMULATOR_HUB_USE_EXISTING=true
     networks:
       - cinefilm-network
     restart: unless-stopped
@@ -120,7 +135,8 @@ services:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:4000"]
       interval: 10s
       timeout: 5s
-      retries: 3
+      retries: 5
+      start_period: 60s
 
   # n8n (workflow automation)
   n8n:
